[tool.poetry]
name = "wyag"
version = "0.1.0"
description = "Wannabe git"
authors = ["Carlton Duffett <carlton.duffett@gmail.com>"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6"
black = "=19.3b0"
isort = "^4.3"
mypy = "^0.720.0"
pylint = "^2.3"

[tool.poetry.scripts]
wyag = "wyag.cli:wyag"
